Improved indicator background handling

https://bugzilla.gnome.org/show_bug.cgi?id=587510